--- a/cgi-bin/Makefile
+++ b/cgi-bin/Makefile
@@ -4,13 +4,15 @@
 .SUFFIXES: .c
 
 CFLAGS = -O2 -g
+CURLFLAGS = `curl-config --cflags` `curl-config --libs`
 M = \
+btc.cgi\
 cat.cgi\
 c.cgi\
 error.cgi\
 vars.cgi\
 
 all: $M
-.c.cgi:; $(CC) $(CFLAGS) $< -o $@
-
+.c.cgi:; $(CC) $< $(CFLAGS) -o $@
+btc.cgi: btc.c; $(CC) btc.c $(CFLAGS) $(CURLFLAGS) -o $@
 clean:; rm $M
