better curl-config

--- a/cgi-bin/Makefile
+++ b/cgi-bin/Makefile
@@ -4,7 +4,8 @@
 .SUFFIXES: .c
 
 CFLAGS = -O2 -g
-CURLFLAGS = `curl-config --cflags` `curl-config --libs`
+CURLFLAGS = `curl-config --cflags --libs`
+CURLCC = `curl-config --cc`
 M = \
 btc.cgi\
 cat.cgi\
@@ -14,5 +15,5 @@ vars.cgi\
 
 all: $M
 .c.cgi:; $(CC) $< $(CFLAGS) -o $@
-btc.cgi: btc.c; $(CC) btc.c $(CFLAGS) $(CURLFLAGS) -o $@
+btc.cgi: btc.c; @set -x; $(CURLCC) btc.c $(CFLAGS) $(CURLFLAGS) -o $@
 clean:; rm $M
